--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Git and Github</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+        aperiam consequuntur delectus eligendi tempore harum aspernatur dolore
+        reiciendis quaerat itaque voluptate, vero ipsa est? Fuga iure
+        reprehenderit debitis corrupti necessitatibus.
+      </p>
+    </header>
+  </body>
 </html>
