--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
         reprehenderit debitis corrupti necessitatibus.
       </p>
     </header>
+    <nav>
+      <ul>
+        <li><a href="#">Link1</a></li>
+        <li><a href="#">Link2</a></li>
+        <li><a href="#">Link3</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
