--- a/index.html
+++ b/index.html
@@ -23,5 +23,20 @@
         <li><a href="#">Link3</a></li>
       </ul>
     </nav>
+    <div class="project">
+      <h2>Project11</h2>
+      <p>lorem</p>
+      <a href="#">Project Link</a>
+    </div>
+    <div class="project">
+      <h2>Project21</h2>
+      <p>lorem</p>
+      <a href="#">Project Link</a>
+    </div>
+    <div class="project">
+      <h2>Project31</h2>
+      <p>lorem</p>
+      <a href="#">Project Link</a>
+    </div>
   </body>
 </html>
