--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
         <li><a href="#">Link3</a></li>
       </ul>
     </nav>
-    <div class="project">
-      <h2>Project11</h2>
-      <p>lorem</p>
-      <a href="#">Project Link</a>
-    </div>
-    <div class="project">
-      <h2>Project21</h2>
-      <p>lorem</p>
-      <a href="#">Project Link</a>
-    </div>
-    <div class="project">
-      <h2>Project31</h2>
-      <p>lorem</p>
-      <a href="#">Project Link</a>
-    </div>
+    <section class="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Project11</h3>
+        <p>lorem</p>
+        <a href="#">Project Link</a>
+      </div>
+      <div class="project">
+        <h3>Project21</h3>
+        <p>lorem</p>
+        <a href="#">Project Link</a>
+      </div>
+      <div class="project">
+        <h3>Project31</h3>
+        <p>lorem</p>
+        <a href="#">Project Link</a>
+      </div>
+    </section>
   </body>
 </html>
