--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
   <body>
     <header>
       <h1>Git and Github</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-        aperiam consequuntur delectus eligendi tempore harum aspernatur dolore
-        reiciendis quaerat itaque voluptate, vero ipsa est? Fuga iure
-        reprehenderit debitis corrupti necessitatibus.
-      </p>
     </header>
     <nav>
       <ul>
@@ -23,20 +17,22 @@
         <li><a href="#">Link3</a></li>
       </ul>
     </nav>
-    <div class="project">
-      <h2>Project11</h2>
-      <p>lorem</p>
-      <a href="#">Project Link</a>
-    </div>
-    <div class="project">
-      <h2>Project21</h2>
-      <p>lorem</p>
-      <a href="#">Project Link</a>
-    </div>
-    <div class="project">
-      <h2>Project31</h2>
-      <p>lorem</p>
-      <a href="#">Project Link</a>
-    </div>
+    <section>
+      <div class="project">
+        <h2>Project11</h2>
+        <p>lorem</p>
+        <a href="#">Project Link</a>
+      </div>
+      <div class="project">
+        <h2>Project21</h2>
+        <p>lorem</p>
+        <a href="#">Project Link</a>
+      </div>
+      <div class="project">
+        <h2>Project31</h2>
+        <p>lorem</p>
+        <a href="#">Project Link</a>
+      </div>
+    </section>
   </body>
 </html>
